--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,9 @@
     font-family: Barcelony;
     src: url("../public/Barcelony.ttf") format("truetype");
   }
+
+  @layer base {
+    html {
+      scroll-behavior: smooth;
+    }
+  }
